Try to fix toggle dropdown account on mobile 5

--- a/client/src/assets/styles/css/style.css
+++ b/client/src/assets/styles/css/style.css
@@ -377,7 +377,7 @@
 }
 
 .header__user--account.active .header__user--account__dropdown {
-  transform: scaleY(100%);
+  transform: scaleY(1);
 }
 
 .header__user--account:hover {
