--- a/client/src/assets/styles/scss/_header.scss
+++ b/client/src/assets/styles/scss/_header.scss
@@ -237,7 +237,7 @@
   }
   &--account.active {
     .header__user--account__dropdown {
-      transform: scaleY(100%);
+      transform: scaleY(1);
     }
   }
   &--account:hover {
